--- a/index.html
+++ b/index.html
@@ -8,5 +8,21 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>Example Site</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="container">
+        <nav>
+          <img src="images/logo.svg" alt="logo icon" />
+          <ul>
+            <li>მთავარი</li>
+            <li>ჩვენს შესახებ</li>
+            <li>სერვისები</li>
+            <li>პროექტები</li>
+            <li>პარტნიორები</li>
+            <li>კონტაქტი</li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+  </body>
 </html>
