added main section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Example Site</title>
   </head>
   <body>
+    <!-- header -->
     <header>
       <div class="container">
         <nav>
@@ -24,5 +25,18 @@
         </nav>
       </div>
     </header>
+    <!--main section  -->
+    <section class="smallerContainer">
+      <img class="mainImage" src="images/mainImage.png" alt="main image" />
+      <div class="imgWrapper">
+        <h3>რატომ ვიყენებთ მას და საიდან მოდის ეს ტექსტი?</h3>
+        <img src="images/img1.png" alt="Example Image" />
+        <img src="images/img2.png" alt="Example Image" />
+        <img src="images/img3.png" alt="Example Image" />
+        <img src="images/img4.png" alt="Example Image" />
+        <img class="lastImg" src="images/img5.png" alt="Example Image" />
+      </div>
+      <div></div>
+    </section>
   </body>
 </html>
