added see more button

--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
           გამეორებადი, შემთხვევითი სიტყვების ან ხუმრობების შემცველი.
         </p>
       </div>
+      <div class="seeMoreWrapper">
+        <button class="seeMore">დამატებითი ინფორმაცია</button>
+      </div>
     </section>
   </body>
 </html>
