added footer layout

--- a/index.html
+++ b/index.html
@@ -84,5 +84,12 @@
         <button class="seeMore">დამატებითი ინფორმაცია</button>
       </div>
     </section>
+    <!-- Footer -->
+    <footer>
+      <div class="container">
+        <div class="contact"></div>
+        <div class="form"></div>
+      </div>
+    </footer>
   </body>
 </html>
