--- a/index.html
+++ b/index.html
@@ -87,7 +87,39 @@
     <!-- Footer -->
     <footer>
       <div class="container">
-        <div class="contact"></div>
+        <div class="contactWrapper">
+          <div class="info">
+            <h4>კონტაქტი</h4>
+            <p>
+              Lorem Ipsum საბეჭდი და ტიპოგრაფიული ინდუსტრიის უშინაარსო ტექსტია.
+              იგი სტანდარტად 1500-იანი წლებიდან იქცა, როდესაც უცნობმა მბეჭდავმა
+              ამწყობ დაზგაზე წიგნის საცდელი ეგზემპლარი დაბეჭდა.
+            </p>
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d381115.18266540254!2d44.55866895230048!3d41.73211894051142!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40440cd7e64f626b%3A0x61d084ede2576ea3!2z4YOX4YOR4YOY4YOa4YOY4YOh4YOY!5e0!3m2!1ska!2sge!4v1661950266692!5m2!1ska!2sge"
+              width="463"
+              height="197"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
+          <div class="contact">
+            <div class="phone">
+              <div>
+                <img src="images/phone.svg" alt="phone icon" />
+              </div>
+              <span>+995 555 444 333</span>
+            </div>
+            <div class="mail">
+              <div>
+                <img src="images/mail.svg" alt="mail icon" />
+              </div>
+              <span>example@gmail.com</span>
+            </div>
+          </div>
+        </div>
         <div class="form"></div>
       </div>
     </footer>
