added form styles

--- a/index.html
+++ b/index.html
@@ -134,6 +134,12 @@
             <textarea id="message" name="message"></textarea>
           </form>
         </div>
+        <div class="rightsWrapper">
+          <div>ყველა უფლება დაცულია</div>
+          <div>
+            <p>დამზადებულია <span></span>-ით</p>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
