--- a/index.html
+++ b/index.html
@@ -134,11 +134,15 @@
             <textarea id="message" name="message"></textarea>
           </form>
         </div>
-        <div class="rightsWrapper">
-          <div>ყველა უფლება დაცულია</div>
-          <div>
-            <p>დამზადებულია <span></span>-ით</p>
-          </div>
+      </div>
+      <div class="rightsWrapper container">
+        <div>ყველა უფლება დაცულია</div>
+        <div>
+          <p>
+            დამზადებულია
+            <span><img src="images/heart.png" alt="heart icon" /></span>-ით
+          </p>
+          <img src="images/smartWeb.png" alt="smartWeb logo" />
         </div>
       </div>
     </footer>
