main page final version

--- a/index.html
+++ b/index.html
@@ -13,14 +13,28 @@
     <header>
       <div class="container">
         <nav>
-          <img src="images/logo.svg" alt="logo icon" />
+          <a href="#">
+            <img src="images/logo.svg" alt="logo icon" />
+          </a>
           <ul>
-            <li>მთავარი</li>
-            <li>ჩვენს შესახებ</li>
-            <li>სერვისები</li>
-            <li>პროექტები</li>
-            <li>პარტნიორები</li>
-            <li>კონტაქტი</li>
+            <a href="#">
+              <li>მთავარი</li>
+            </a>
+            <a href="#">
+              <li>ჩვენს შესახებ</li>
+            </a>
+            <a href="#">
+              <li>სერვისები</li>
+            </a>
+            <a href="#">
+              <li>პროექტები</li>
+            </a>
+            <a href="#">
+              <li>პარტნიორები</li>
+            </a>
+            <a href="#">
+              <li class="contactButton">კონტაქტი</li>
+            </a>
           </ul>
         </nav>
       </div>
@@ -132,6 +146,9 @@
             <input type="number" id="phone" name="phone" />
             <label for="message">შეტყობინება</label>
             <textarea id="message" name="message"></textarea>
+            <div class="sendWrapper">
+              <button class="send">გაგზავნა</button>
+            </div>
           </form>
         </div>
       </div>
@@ -139,8 +156,9 @@
         <div>ყველა უფლება დაცულია</div>
         <div>
           <p>
-            დამზადებულია
-            <span><img src="images/heart.png" alt="heart icon" /></span>-ით
+            დამზადებულია<span>
+              <img src="images/heart.png" alt="heart icon" /></span
+            >-ით
           </p>
           <img src="images/smartWeb.png" alt="smartWeb logo" />
         </div>
